# http-server-ws

./: 127.0.0.1.key  Base64.cpp  ControlsDatabase.cpp  ControlsDatabase.h  Encryption.h  Functions_inside_thread.cpp  Generate_key.h  Interrupt.cpp  Interrupt.h  LogFile.cpp  LogFile.h  Main.cpp  MyCover.cpp  MyCover.h  My_date_base.h  My_namespace.cpp  OtherExceptions.h  Parser.cpp  Parser.h  README.md  Request.cpp  Response.cpp  Response.h  ResponseRequest.h  SendRecv.cpp  SendRecv.h  Server.cpp  Server.h  Server_Vitek.vcxproj  Server_Vitek.vcxproj.filters  Var_for_threads.h  WSLexer.cpp  WSLexer.h  WebSocket.cpp  data_auten.dblite  http-server-ws.sln  http-server-ws.vcxproj  http-server-ws.vcxproj.filters  login.txt  threads.cpp
android_client/WsChat/app/: build.gradle
css/: authorization.css  chat.css  code.css  faq.css  home.css
html/: authorization.html  chat.html  code.html  contact.html  faq.html  index.html  wiki.html
installDLLs/: collect_debug64_DLLs.bat  collect_release64_DLLs.bat
js/: hash.js  home.js  websocket.js
openSSL/: rootCA.crt  rootCA.key  rootCA.srl
openSSL/lib/: libeay32.lib
server/: 127.0.0.1.key  127.0.0.1.pem  CMakeLists.txt  main.cpp
server/engine/: CMakeLists.txt
server/engine/core/: CMakeLists.txt  SslServer.cpp  SslServer.h  Transport.cpp  Transport.h
server/engine/core/interfaces/: CMakeLists.txt  I_SslServer.h
server/engine/core/private/: CMakeLists.txt  SslServer.cpp  SslServer.h
server/engine/http/: CMakeLists.txt  GeneratorOfResponseHTTP.cpp  GeneratorOfResponseHTTP.h  Response.cpp  Response.h  WSLexer.cpp  WSLexer.h
server/engine/types/: CMakeLists.txt  ServerTypes.h
sources/VNetwork/Util_Classes/: FBL_StubRegistry.h
sources/VReport/Headers/: VRP.h  VRP_Macros.h  VRP_Types.h
sources/VSDK/: VSDK2.h  VSDK_Objects.cpp  VSDK_Objects.h
sources/VShared/Sqlite/: VSQL_SqliteQueryResult.cpp  (+1 more)
test_db/: userAuthData.vdb
vdbdll/: 127.0.0.1.crt
vdblib/: vclient_mt_release_x64.lib  vclient_release_x64.lib  vreport_mt_release_x64.lib  vreport_release_x64.lib
ws_server/: Encryption.cpp  Encryption.h  Generate_key.h  Main.cpp  OtherException.cpp  OtherExceptions.h  README.md  Server.h  WSLexer.cpp  http-server-ws.sdf  http-server-ws.sln
ws_server/installDLLs/: collect_release64_DLLs.bat
ws_server/vdblib/: vkernel_mt_release_x64.lib  vkernel_release_x64.lib  vshared_mt_release_x64.lib  vshared_release_x64.lib
(+599 files in other folders)
